[tool.poetry]
name = "python-web-hw6-postgres"
version = "0.1.0"
description = ""
authors = ["Kirienko-Alyona <ladybird.miami@gmail.com>"]
readme = "README.md"
packages = [{include = "python_web_hw6_postgres"}]

[tool.poetry.dependencies]
python = "^3.10"
postgres = "^4.0"
psycopg2 = "^2.9.5"
faker = "^17.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
